--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </header>
     <main>
         <h2>Welcome!</h2>
-        <p>Hi, I'm Pooja Sri B and I'm a B.Tech graduate specialised in Information Technology. I'm looking forward for challenging work experiences and new work palce environments </p>
+        <p>Hi, I'm Pooja Sri B and I'm pursuing B.Tech. Information Technology. I'm looking forward for challenging work experiences and new work place environments </p>
         <h2>My Projects</h2>
         <ul>
           <li>
@@ -85,8 +85,8 @@
             <p>A monitoring System for IV Drip bottles in hospitals using ESP-32 microcontroller and Ultrasonic sensor</p>
           </li>
           <li>
-            <h3><i>Visualising Compiler</i></h3>
-            <p>A Compiler that visualises each stage of the compiler built using C programming language</p>
+            <h3><i>Compiler</i></h3>
+            <p>Phase 1(LEXER) and Phase 2(PARSER) of a Compiler that visualises the intermediate stages of the compiler built using C programming language</p>
           </li>
         </ul>      
     </main>
